samples/_failures_safe/1761310139_4a96a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21ca3d40.c: In function ‘main’:
./samples/SAFE/__tmp_21ca3d40.c:185:20: error: missing terminating " character
  185 |             printf("
      |                    ^
./samples/SAFE/__tmp_21ca3d40.c:185:13: error: expected expression at end of input
  185 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_21ca3d40.c:185:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_21ca3d40.c:185:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_21ca3d40.c:185:13: error: expected declaration or statement at end of input
